<resources>
    <string name="app_name">19 Telemetry App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NUS Formula SAE</string>
    <string name="nav_header_subtitle">www.eng.nus.edu.sg/edic/fsae-about-us.html</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="labelSpeed">Speed</string>
    <string name="labelGear">Gear</string>
    <string name="labelRPM">RPM</string>
    <string name="labelTp">Throttle</string>
    <string name="labelBrake">Brake</string>
    <string name="labelEngTemp">Eng Temp</string>
    <string name="labelOilTemp">Oil Temp</string>
    <string name="labelBatteryVolts">Battery</string>
    <string name="labelAirTemp">Air Temp</string>
    <string name="labelOilPres">Oil Pres</string>
    <string name="labelFuelPres">Fuel Pres</string>
    <string name="labelBrakePressureFront">Brake Press</string>
    <string name="brakeTemp">Brake Temp</string>
    <string name="labelBrakeBias">Brake Bias</string>
    <string name="labelLambdaDiff">Lambda</string>
    <string name="labelTyreTempRRI">Tyre RRI</string>
    <string name="labelTyreTempRRO">Tyre RRO</string>
    <string name="labelThrottlePedal">Pedal</string>
    <string name="labelThrottlePos">Throttle Pos</string>
    <string name="labelTpMode">TP Mode</string>
    <string name="labelDamperFL">Damper FL</string>
    <string name="labelDamperFR">Damper FR</string>
    <string name="labelDamperRL">Damper RL</string>
    <string name="labelDamperRR">Damper RR</string>
    <string name="labelLatG">Lateral G</string>
    <string name="labelLongG">Long G</string>
    <string name="labelIAT">Air Temp</string>
    <string name="labelBrakePres">Brake Pres</string>
    <string name="labelBrakeTemp">Brake Temp</string>
</resources>
