<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gridHeight"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/gridMargin"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingRight="@dimen/labelTextMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dataMarginTop"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="45"
                        android:textSize="@dimen/dataTextSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="km/h"
                        android:textSize="@dimen/unitSize" />

                </LinearLayout>

                <TextView
                    android:id="@+id/labelSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/labelTextMargin"
                    android:text="@string/labelSpeed"
                    android:textSize="@dimen/labelTextSize" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/gridMargin"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="@dimen/dataMarginTop"
                    android:text="3"
                    android:textSize="@dimen/dataTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/labelTextMargin"
                    android:text="@string/labelGear"
                    android:textSize="@dimen/labelTextSize" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--Column 3-->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/gridMargin"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingRight="@dimen/labelTextMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dataMarginTop"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6.2"
                        android:textSize="@dimen/dataTextSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="k"
                        android:textSize="15dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/labelTextMargin"
                    android:text="@string/labelRPM"
                    android:textSize="@dimen/labelTextSize" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </GridLayout>
    <!--Throttle|Brake -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gridHeight"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/gridMargin"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/labelTextMargin"
                        android:layout_marginRight="20dp"
                        android:text="@string/labelTp" />

                    <TextView
                        android:id="@+id/tp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/tpProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/gridMargin"
                    android:progress="50"
                    android:progressTint="@color/colorGreen" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/labelTextMargin"
                        android:layout_marginRight="35dp"
                        android:text="@string/labelBrake" />

                    <TextView
                        android:id="@+id/brake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/brakeProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/gridMargin"
                    android:progress="50"
                    android:progressTint="@color/colorPrimaryDark" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </GridLayout>

</android.support.constraint.ConstraintLayout>