<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gridHeight"
        android:layout_marginTop="@dimen/lower_margin"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/gridMargin"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingRight="@dimen/labelTextMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dataMarginTop"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/oilPres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="243"
                        android:textSize="@dimen/dataTextSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="kPa"
                        android:textSize="@dimen/unitSize" />

                </LinearLayout>

                <TextView
                    android:id="@+id/labelOilPres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/labelTextMargin"
                    android:text="@string/labelOilPres"
                    android:textSize="@dimen/labelTextSize" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/gridMargin"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingRight="@dimen/labelTextMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dataMarginTop"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fuelPres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="332"
                        android:textSize="@dimen/dataTextSize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="kPa"
                        android:textSize="@dimen/unitSize" />

                </LinearLayout>

                <TextView
                    android:id="@+id/labelFuelPres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/labelTextMargin"
                    android:text="@string/labelFuelPres"
                    android:textSize="@dimen/labelTextSize" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--Column 3-->
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/gridMargin"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingRight="@dimen/labelTextMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dataMarginTop"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lambda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+0.05"
                        android:textSize="@dimen/dataTextSizeSmall" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/labelTextMargin"
                    android:text="@string/labelLambdaDiff"
                    android:textSize="@dimen/labelTextSize" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </GridLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gridHeight"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>